infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: tarunshrma/client:latest
---
kind: Service
apiVersion: v1
metadata:
  name:  client-clusterip-srv
spec:
  selector:
    app:  client
  type:  ClusterIP
  ports:
  - name:  client
    port:  3000
    targetPort:  3000
