infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
      - name: comment
        image: tarunshrma/comment:latest
---
kind: Service
apiVersion: v1
metadata:
  name:  comment-clusterip-srv
spec:
  selector:
    app:  comment
  type:  ClusterIP
  ports:
  - name:  comment
    port:  4001
    targetPort:  4001
---
kind: Service
apiVersion: v1
metadata:
  name:  comment-nodeport-srv
spec:
  selector:
    app:  comment
  type:  NodePort
  ports:
  - name:  comment
    protocol: TCP
    port:  4001
    targetPort:  4001
