infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: tarunshrma/event-bus:latest
---
kind: Service
apiVersion: v1
metadata:
  name:  event-bus-clusterip-srv
spec:
  selector:
    app:  event-bus
  type:  ClusterIP
  ports:
  - name:  event-bus
    port:  4005
    targetPort:  4005
