infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: tarunshrma/posts:latest
---
kind: Service
apiVersion: v1
metadata:
  name:  posts-clusterip-srv
spec:
  selector:
    app:  posts
  type:  ClusterIP
  ports:
  - name:  posts
    port:  4000
    targetPort:  4000
