infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: tarunshrma/query:latest
---
kind: Service
apiVersion: v1
metadata:
  name:  query-clusterip-srv
spec:
  selector:
    app:  query
  type:  ClusterIP
  ports:
  - name:  query
    port:  4003
    targetPort:  4003
